--- a/CourseRegestrationProject.csproj
+++ b/CourseRegestrationProject.csproj
@@ -72,12 +72,52 @@
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="Web.config" />
+    <Content Include="Dashbard.aspx" />
+    <Content Include="New_course.aspx" />
+    <Content Include="Edit_course.aspx" />
+    <Content Include="Student_detail.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Dashbard.aspx.cs">
+      <DependentUpon>Dashbard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Dashbard.aspx.designer.cs">
+      <DependentUpon>Dashbard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="New_course.aspx.cs">
+      <DependentUpon>New_course.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="New_course.aspx.designer.cs">
+      <DependentUpon>New_course.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_course.aspx.cs">
+      <DependentUpon>Edit_course.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Edit_course.aspx.designer.cs">
+      <DependentUpon>Edit_course.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Student_detail.aspx.cs">
+      <DependentUpon>Student_detail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Student_detail.aspx.designer.cs">
+      <DependentUpon>Student_detail.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Site1.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
