--- a/CourseRegestrationProject.csproj
+++ b/CourseRegestrationProject.csproj
@@ -44,6 +44,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data.SqlClient, Version=4.6.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Data.SqlClient.4.9.0\lib\net462\System.Data.SqlClient.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -72,7 +75,9 @@
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
     <Content Include="Web.config" />
-    <Content Include="Dashbard.aspx" />
+    <Content Include="Dashbard.aspx">
+      <BrowseToURL>~/Dashbard.aspx</BrowseToURL>
+    </Content>
     <Content Include="New_course.aspx" />
     <Content Include="Edit_course.aspx" />
     <Content Include="Student_detail.aspx" />
